--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>CFX Servers - FiveM & RedM Server List</title>
     <!-- Ad Slot: Head Scripts (Google AdSense, etc.) -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script> -->
+    <!-- Adsterra: Popunder -->
+    <script src="https://pl28715064.effectivegatecpm.com/fc/39/cd/fc39cde4a5cbfc3a4327a6ba2060a56c.js"></script>
   </head>
   <body class="bg-gray-950 text-gray-100 antialiased">
     <div id="app"></div>
