Add SEO meta, sitemap, robots, and useSeo
Enhance SEO and indexing: expand index.html with comprehensive meta tags (title, description, keywords, canonical, hreflang), Open Graph and Twitter cards, preconnects, noscript fallback, and JSON-LD structured data. Add public/robots.txt and public/sitemap.xml to guide crawlers. Introduce src/composables/useSeo.ts to manage dynamic meta and JSON-LD updates, and integrate it in HomePage.vue to set SEO on mount and update structured data when server stats change. These changes improve search visibility, social previews, and crawler friendliness.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,104 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FiveM & RedM Server List - ค้นหาเซิร์ฟเวอร์ FiveM และ RedM ในประเทศไทย" />
+
+    <!-- Primary Meta Tags -->
+    <title>CFX Servers - FiveM & RedM Server List | รายการเซิร์ฟเวอร์ FiveM & RedM</title>
+    <meta name="title" content="CFX Servers - FiveM & RedM Server List | รายการเซิร์ฟเวอร์ FiveM & RedM" />
+    <meta name="description" content="Browse and find the best FiveM & RedM servers worldwide. Real-time server list with player counts, filters, and search. ค้นหาเซิร์ฟเวอร์ FiveM และ RedM ที่ดีที่สุดจากทั่วโลก" />
+    <meta name="keywords" content="FiveM, RedM, server list, FiveM servers, RedM servers, GTA V RP, RDR2 RP, roleplay, เซิร์ฟเวอร์ FiveM, เซิร์ฟเวอร์ RedM, เซิร์ฟ FiveM ไทย, GTA V ออนไลน์, CFX, Cfx.re" />
+    <meta name="author" content="Azael Dev" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="googlebot" content="index, follow" />
     <meta name="theme-color" content="#0f172a" />
-    <title>CFX Servers - FiveM & RedM Server List</title>
+    <link rel="canonical" href="https://servers.azael.dev/" />
+
+    <!-- Hreflang: Language alternatives -->
+    <link rel="alternate" hreflang="en" href="https://servers.azael.dev/" />
+    <link rel="alternate" hreflang="th" href="https://servers.azael.dev/" />
+    <link rel="alternate" hreflang="x-default" href="https://servers.azael.dev/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://servers.azael.dev/" />
+    <meta property="og:title" content="CFX Servers - FiveM & RedM Server List" />
+    <meta property="og:description" content="Browse and find the best FiveM & RedM servers worldwide. Real-time server list with player counts, filters, and search." />
+    <meta property="og:image" content="https://servers.azael.dev/images/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="th_TH" />
+    <meta property="og:site_name" content="CFX Servers" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://servers.azael.dev/" />
+    <meta name="twitter:title" content="CFX Servers - FiveM & RedM Server List" />
+    <meta name="twitter:description" content="Browse and find the best FiveM & RedM servers worldwide. Real-time server list with player counts, filters, and search." />
+    <meta name="twitter:image" content="https://servers.azael.dev/images/og-image.png" />
+
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://servers-frontend.fivem.net" crossorigin />
+    <link rel="dns-prefetch" href="https://servers-frontend.fivem.net" />
+
+    <!-- Structured Data: WebSite (Google Search) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "CFX Servers",
+      "alternateName": ["FiveM Server List", "RedM Server List", "รายการเซิร์ฟเวอร์ FiveM", "รายการเซิร์ฟเวอร์ RedM"],
+      "url": "https://servers.azael.dev/",
+      "description": "Browse and find the best FiveM & RedM servers worldwide. Real-time server list with player counts, filters, and search.",
+      "inLanguage": ["en", "th"],
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://servers.azael.dev/?q={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+    <!-- Structured Data: WebApplication -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "CFX Servers",
+      "url": "https://servers.azael.dev/",
+      "applicationCategory": "GameApplication",
+      "operatingSystem": "Web",
+      "description": "Real-time FiveM and RedM server browser with live player counts, search, and filters.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "Azael Dev",
+        "url": "https://azael.dev"
+      }
+    }
+    </script>
+
     <!-- Ad Slot: Head Scripts (Google AdSense, etc.) -->
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script> -->
     <!-- Adsterra: Popunder -->
     <script src="https://pl28715064.effectivegatecpm.com/fc/39/cd/fc39cde4a5cbfc3a4327a6ba2060a56c.js"></script>
   </head>
   <body class="bg-gray-950 text-gray-100 antialiased">
+    <!-- SEO: Noscript fallback content for crawlers -->
+    <noscript>
+      <div style="padding: 2rem; text-align: center; color: #ccc;">
+        <h1>CFX Servers - FiveM & RedM Server List</h1>
+        <p>Browse and find the best FiveM and RedM servers worldwide. ค้นหาเซิร์ฟเวอร์ FiveM และ RedM ที่ดีที่สุดจากทั่วโลก</p>
+        <p>Please enable JavaScript to use this application.</p>
+      </div>
+    </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
