Switch ad integration to Google AdSense
Replace Adsterra with Google AdSense across the app: add AdSense script to index.html, refactor AdBanner.vue to render <ins class="adsbygoogle"> and push ads via window.adsbygoogle, and add ADSENSE config (CLIENT_ID and SLOTS) to constants. Update README to document AdSense setup and provide steps to configure Publisher ID, ad unit slot IDs, and toggle ad positions. Ad blocker detection remains handled by AdBlockDetector.vue.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <link rel="preconnect" href="https://servers-frontend.fivem.net" crossorigin />
     <link rel="dns-prefetch" href="https://servers-frontend.fivem.net" />
 
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3218585194390171" crossorigin="anonymous"></script>
+
     <!-- Structured Data: WebSite (Google Search) -->
     <script type="application/ld+json">
     {
