Add HilltopAds meta tags and referrer policy
Insert HilltopAds verification and referrer meta tags alongside Google AdSense. Adds a comment and two meta tags: a referrer policy (no-referrer-when-downgrade) and a verification key, placed before the site's structured data script to enable HilltopAds integration.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3218585194390171" crossorigin="anonymous"></script>
 
+    <!-- HilltopAds -->
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+    <meta name="d5bddb27a57229762310ce99bfb52c93b73f5107" content="d5bddb27a57229762310ce99bfb52c93b73f5107" />
+
     <!-- Structured Data: WebSite (Google Search) -->
     <script type="application/ld+json">
     {
