--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <link rel="preconnect" href="https://servers-frontend.fivem.net" crossorigin />
     <link rel="dns-prefetch" href="https://servers-frontend.fivem.net" />
 
+    <!-- Adsterra Ad: popunder -->
+    <script src="https://pl28715064.effectivegatecpm.com/fc/39/cd/fc39cde4a5cbfc3a4327a6ba2060a56c.js"></script>
+
     <!-- Structured Data: WebSite (Google Search) -->
     <script type="application/ld+json">
     {
