Comment out Adsterra popunder script
Disable the Adsterra popunder by commenting out the external <script> tag in index.html to stop loading the third-party ad script and associated popunder behavior. Can be re-enabled by uncommenting the script tag if needed.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <link rel="dns-prefetch" href="https://servers-frontend.fivem.net" />
 
     <!-- Adsterra Ad: popunder -->
-    <script src="https://pl28715064.effectivegatecpm.com/fc/39/cd/fc39cde4a5cbfc3a4327a6ba2060a56c.js"></script>
+    <!-- <script src="https://pl28715064.effectivegatecpm.com/fc/39/cd/fc39cde4a5cbfc3a4327a6ba2060a56c.js"></script> -->
 
     <!-- Structured Data: WebSite (Google Search) -->
     <script type="application/ld+json">
